Remove unnecessary element from form, fix mobile overflow

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-credentials/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-credentials/style.scss
@@ -7,6 +7,10 @@
 		}
 	}
 
+	&__form {
+		margin-bottom: 60px;
+	}
+
 	.site-migration-credentials__content,
 	.site-migration-credentials__error-banner {
 		margin: 0 auto 16px;
